--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <title>Document</title>
 </head>
-<body>
+<body>l̥
     <nav>
         <div class="logo">Johnathan Specter</div>
         <ul>
@@ -70,7 +70,30 @@
 
 
     <section class="info">
-        
+        <div class="info-1">
+            <h4>A co-founder at one of the world's largest communities.</h4>
+            <p>The combined experience I have working at the top Fortune 500 companies has allowed me to develop a skill-set that helps me not in just development, but in every aspect of any business</p>
+
+            <p>I'm proud to announce that I am now working at one of the world's largest communities teaching young minds about how to <italic>sell</italic>yourself as a developer ans open them to a whole new world of opportunities</p>
+        </div>
+
+        <div class="info-2">
+            <p>As a developer, you have everything available to you and all that's holding you back is yourself.</p>
+
+            <p>A quote I live by perfectly illustrates what I mean.</p>
+
+            <p>"How big would you dream, if you<bold>knew</bold> you wouldn't fail?" You've already gone through the hardest parts being a developer, it's time to elevate your skills and become a leader in something you're<italic>passionate</italic>about.</p>
+
+            <p>I'm happy to chat over coffee some time about how I can help your company.</p>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="contactcard">
+            <h4>Interested in working with me?</h4>
+            <p>I'm active on all social media listed below, but you can also mail me and I will get back to you within 24-48 hours.</p>
+            <button class="contact-btn">Get in touch</button>
+        </div>
     </section>
 </body>
 </html>
